WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201756
[JSC] X86Registers.h callee-save register definition is wrong
https://bugs.webkit.org/show_bug.cgi?id=201756
Summary
[JSC] X86Registers.h callee-save register definition is wrong
Yusuke Suzuki
Reported
2019-09-13 00:20:49 PDT
[JSC] X86Registers.h callee-save register definition is wrong
Attachments
Patch
(2.57 KB, patch)
2019-09-13 00:21 PDT
,
Yusuke Suzuki
mark.lam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2019-09-13 00:21:52 PDT
Created
attachment 378717
[details]
Patch
Yusuke Suzuki
Comment 2
2019-09-13 02:20:34 PDT
Committed
r249830
: <
https://trac.webkit.org/changeset/249830
>
Radar WebKit Bug Importer
Comment 3
2019-09-13 02:21:18 PDT
<
rdar://problem/55333234
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug